fix: footer not sticking to bottom of the page on IE (#451)
Fixes the body container collapsing on IE, causing the footer to show up right under the navigation.

--- a/material.angular.io/material.angular.io/material.angular.io/material.angular.io/material.angular.io/src/app/pages/component-sidenav/component-sidenav.scss
+++ b/material.angular.io/material.angular.io/material.angular.io/material.angular.io/material.angular.io/src/app/pages/component-sidenav/component-sidenav.scss
@@ -106,14 +106,14 @@ app-component-sidenav {
 }
 
 .docs-component-sidenav-inner-content {
-  display: flex; 
+  display: flex;
   flex-direction: column;
   flex: 1;
 }
 
 .docs-component-sidenav-body-content {
   display: flex;
-  flex: 1;
+  flex: 1 1 auto;
 }
 
 @media (max-width: $small-breakpoint-width) {
